# tui-realm-textarea

./: Cargo.toml
examples/: demo.rs
src/: lib.rs
