[package]
name = "tui-realm-textarea"
version = "1.1.2"
authors = ["Christian Visintin"]
edition = "2021"
categories = ["command-line-utilities"]
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
homepage = "https://github.com/veeso/tui-realm-textarea"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/tui-realm-textarea"

[dependencies]
cli-clipboard = { version = "^0.4", optional = true }
lazy-regex = "^3"
tuirealm = { git = 'https://github.com/strowk/tui-realm.git', branch = "improvements", default-features = false, features = [
    "derive"
] }
tui-textarea = {  git = 'https://github.com/strowk/tui-textarea.git', branch = "ratatui-0.22", default-features = false }

[dev-dependencies]
crossterm = "^0.25"
pretty_assertions = "^1.0.0"
tui-realm-stdlib = {  git = 'https://github.com/strowk/tui-realm-stdlib.git', branch = "improvements", default-features = false }

[features]
default = ["with-crossterm", "ratatui"]
clipboard = ["cli-clipboard"]
search = ["tui-textarea/search"]
ratatui = ["tuirealm/ratatui", "tui-textarea/ratatui-your-backend"]
with-crossterm = ["tuirealm/with-crossterm", "tui-textarea/crossterm"]
with-termion = ["tuirealm/with-termion"]

[[example]]
name = "demo"
path = "examples/demo.rs"
